name:                transmission-proxy
version:             0.1.0.0
synopsis:            Sending torrents to the remote transmission client
license:             MIT
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10
description:         Watching a given directory for a new torrent files and sending them to the remote transmission client

source-repository head
    type:     git
    location: https://github.com/dmalikov/transmission-proxy

executable transmission-proxy
  main-is:
    Main.hs
  other-extensions:
    OverloadedStrings, ScopedTypeVariables
  other-modules:
    Config
    Proxy
    Transmission
  build-depends:
      aeson > 1.1
    , base >= 4.8 && < 5
    , base64-bytestring >= 1.0
    , bencoding
    , bytestring
    , containers
    , directory
    , fast-logger
    , filemanip
    , filepath
    , fsnotify
    , hstorrent
    , http-client >= 0.5
    , http-client-tls >= 0.3.4
    , http-types >= 0.9.1
    , lens
    , network-uri
    , process
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
