name:                transmission-servant
version:             0.1.0.0
synopsis:            Script watching given directory for a torrents and sending them to remote transmission client
license:             MIT
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README
cabal-version:       >= 1.10

executable transmission-servant
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, ScopedTypeVariables
  build-depends:
      base        >= 4.7 && < 4.8
    , bencoding
    , bytestring
    , directory
    , filemanip
    , filepath
    , hstorrent
    , lens
    , network-uri
    , process
  hs-source-dirs:       src
  default-language:    Haskell2010
