name:                transmission-servant
version:             0.1.0.0
synopsis:            Sending torrents to the remote transmission client
license:             MIT
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README
cabal-version:       >= 1.10
description:         Watching a given directory for a new torrent files and sending them to remote transmission client

executable transmission-servant
  main-is:
    Main.hs
  other-extensions:
    OverloadedStrings, ScopedTypeVariables
  other-modules:
    Config
    Servant
    Transmission
  build-depends:
      aeson
    , base >= 4.8 && < 5
    , bencoding
    , bytestring
    , containers
    , directory
    , fast-logger
    , filemanip
    , filepath
    , fsnotify
    , hstorrent
    , lens
    , network-uri
    , process
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -O2
